Assertion `max_len > 0` failed.
After running the program for about 5 hours, I came back to my computer to find this error:
intel_gpu_top: ../tools/intel_gpu_top.c:1225: print_percentage_bar: Assertion `max_len > 0` failed.
Aborted.
Here are some details about my system:
.-/+oossssoo+/-. user@machine
`:+ssssssssssssssssss+:` ----------------
-+ssssssssssssssssssyyssss+- OS: Ubuntu 23.04 x86_64
.ossssssssssssssssssdMMMNysssso. Kernel: 6.2.0-26-generic
/ssssssssssshdmmNNmmyNMMMMhssssss/ Uptime: 4 hours, 17 mins
+ssssssssshmydMMMMMMMNddddyssssssss+ Packages: 900 (dpkg), 5 (snap)
/sssssssshNMMMyhhyyyyhmNMMMNhssssssss/ Shell: bash 5.2.15
.ssssssssdMMMNhsssssssssshNMMMdssssssss. Resolution: 3840x2160
+sssshhhyNMMNyssssssssssssyNMMMysssssss+ Terminal: /dev/pts/0
ossyNMMMNyMMhsssssssssssssshmmmhssssssso CPU: Intel N95 (4) @ 3.400GHz
ossyNMMMNyMMhsssssssssssssshmmmhssssssso GPU: Intel Alder Lake-N [UHD Graphics]
+sssshhhyNMMNyssssssssssssyNMMMysssssss+ Memory: 881MiB / 15757MiB
.ssssssssdMMMNhsssssssssshNMMMdssssssss.
/sssssssshNMMMyhhyyyyhdNMMMNhssssssss/
+sssssssssdmydMMMMMMMMddddyssssssss+
/ssssssssssshdmNNNNmyNMMMMhssssss/
.ossssssssssssssssssdMMMNysssso.
-+sssssssssssssssssyyyssss+-
`:+ssssssssssssssssss+:`
.-/+oossssoo+/-.